# objson

./: .gitignore  README.md  pyproject.toml
objson/: __init__.py  api.py  lexer.py  parser.py  registry.py  serialize.py  token.py
test/: test_lexer.py  test_parser.py  test_registry.py  test_serialize.py  test_sets.py
